hphp/hack/test/typecheck/return_mismatch/return_with_and_without_expr4.php
<?hh // partial
// Copyright 2004-present Facebook. All Rights Reserved.

function test(bool $b) {
  if ($b) {
    return 42;
  } else {
    return;
  }
}
